# maze-wars

./: Cargo.toml  README.md
client/: .gitignore  Cargo.toml
client/src/: main.rs  map.rs  net.rs
client/src/game_front/: laser.rs  mod.rs  player.rs  world.rs
client/src/game_setup/: game_setup.rs  mod.rs
client/src/menu/: menu.rs  mod.rs
client/src/network/: mod.rs  network.rs
client/src/player_network/: mod.rs  player_network.rs
client2/: Cargo.toml
client2/src/: main.rs  messages.rs  net.rs
server/: Cargo.toml  client.py  test.py
server/src/: main.rs  player.rs  position.rs  rotation.rs  weapon.rs
server/src/server/: client_messages.rs  game.rs  game_state.rs  message_handlers.rs  message_helpers.rs  mod.rs  server.rs  server_messages.rs
shared/: Cargo.toml
shared/src/: lib.rs  player.rs  position.rs  rotation.rs
shared/src/server/: client_messages.rs  mod.rs  server_messages.rs
