[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = { version = "0.35", features = ["ttf", "image","gfx"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
rand = "0.8"
shared = { path = "../shared" }
