[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.35", features = ["serde"] }
log = "0.4.26"
colored = "3.0.0"
rand = "0.8"
tokio = { version = "1.44.1", features = ["full"] }
shared = { path = "../shared" }
